# go-gin-example/routers/router.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 
 	"github.com/PeiLeizzz/go-gin-example/middleware/jwt"
+	"github.com/PeiLeizzz/go-gin-example/pkg/export"
 	"github.com/PeiLeizzz/go-gin-example/pkg/setting"
 	"github.com/PeiLeizzz/go-gin-example/pkg/upload"
 	"github.com/PeiLeizzz/go-gin-example/routers/api"
@@ -25,6 +26,7 @@ func InitRouter() *gin.Engine {
 	r.POST("/auth", api.GetAuth)
 	r.POST("/upload", api.UploadImage)
 	r.StaticFS("/upload/images", http.Dir(upload.GetImageFullPath()))
+	r.StaticFS("/export/tags", http.Dir(export.GetExcelFullPath()))
 
 	apiv2 := r.Group("/api/v2")
 	apiv2.Use(jwt.JWT())
@@ -33,6 +35,8 @@ func InitRouter() *gin.Engine {
 		apiv2.POST("/tags", v2.AddTag)
 		apiv2.PUT("/tags/:id", v2.EditTag)
 		apiv2.DELETE("/tags/:id", v2.DeleteTag)
+		apiv2.POST("/tags/export", v2.ExportTag)
+		apiv2.POST("/tags/import", v2.ImportTag)
 	}
 
 	{
